Fix layout issues

--- a/geoportailv3/static/less/sidebar.less
+++ b/geoportailv3/static/less/sidebar.less
@@ -132,6 +132,7 @@
     margin-left: 10px;
     float:none;
     vertical-align: middle;
+    display: inline;
   }
   input[type=range]::-webkit-slider-runnable-track {
     width: @range-width;
